# CM_UI

./: .gitattributes  .replit  package-lock.json  package.json  pyproject.toml  replit.md  vite.config.ts
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1776999078844.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1777001452148.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1777002124551.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1777003056531.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1777004083693.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: Sidebar.tsx
client/src/lib/: api.ts  queryClient.ts
client/src/pages/: BuildDomain.tsx  CreateDomain.tsx  Dashboard.tsx  DefineDomainDetails.tsx  DocumentAnalysis.tsx  DomainHome.tsx  ExpandSearch.tsx  InsightsSummary.tsx  Login.tsx  ReviewDefineDomains.tsx  ReviewPublish.tsx  ReviewValidate.tsx  Step1Domain.tsx  Step1Upload.tsx  Step2Extract.tsx  Step2Upload.tsx  Step3Extract.tsx  Step3Validate.tsx  Step4Analyze.tsx  Step4Synthesize.tsx  Step5Finalize.tsx  Step5Validate.tsx  Step6Summary.tsx  StructuredData.tsx  Welcome.tsx
server/: main.py  routes.ts  storage.ts
shared/: schema.ts
